# viewer

./: Cargo.toml  README.md  install.sh
crates/micro-media/: Cargo.toml
crates/micro-media/src/: lib.rs  scope.rs  types.rs
crates/viewer/: Cargo.toml
crates/viewer-core/: Cargo.toml
crates/viewer-core/src/: csv.rs  image.rs  lib.rs  media.rs  mesh.rs  midi.rs  office.rs  pdf.rs  text.rs
crates/viewer-core/tests/fixtures/: test.csv  test.docx  test.md  test.xlsx
crates/viewer/src/: app.rs  clip.rs  headless.rs  ipc.rs  main.rs
crates/viewer/src/ui/: image_view.rs  media_view.rs  mesh_view.rs  mod.rs  pdf_view.rs  table.rs  text_view.rs
