[package]
name = "viewer-core"
version = "0.1.0"
edition = "2021"
description = "Fast, UI-agnostic file decoding for CSV/TSV, images, SVG, Office/OpenDocument, Markdown and PDF. Decodes a path into Send-able raw data (RGBA pixels, table rows, text) off the UI thread — no GPU or windowing dependency."
license = "MIT OR Apache-2.0"

[features]
default = ["pdf"]
# PDF page rendering via pdfium. Optional because it pulls `pdfium-render` and
# needs `libpdfium.so` at runtime. Without it, `decode()` still returns the raw
# PDF bytes (Decoded::Pdf); only the `pdf` module (rendering) is gated off.
pdf = ["dep:pdfium-render"]

[dependencies]
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp", "tiff", "ico"] }
resvg = "0.44"
csv = "1.3"
calamine = "0.26"
zip = "2"
quick-xml = "0.36"
pdfium-render = { version = "0.8", optional = true }
