[package]
name = "viewer-core"
version = "0.1.0"
edition = "2021"
description = "Fast, UI-agnostic file decoding for CSV/TSV, images, SVG, Office/OpenDocument, Markdown and PDF. Decodes a path into Send-able raw data (RGBA pixels, table rows, text) off the UI thread — no GPU or windowing dependency."
license = "MIT OR Apache-2.0"

[features]
default = ["pdf"]
# PDF page rendering via pdfium. Optional because it pulls `pdfium-render` and
# needs `libpdfium.so` at runtime. Without it, `decode()` still returns the raw
# PDF bytes (Decoded::Pdf); only the `pdf` module (rendering) is gated off.
pdf = ["dep:pdfium-render"]
# 3D mesh decoding (OBJ / glTF / GLB). OBJ has a small built-in multi-threaded
# parser (no extra dep); glTF/GLB via `gltf`. Off by default to keep the core
# lean: enable it only in builds that display 3D models. Without it, opening one
# of these files yields a clear "not compiled in" error.
mesh = ["dep:gltf"]

[dependencies]
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp", "tiff", "ico", "tga", "dds", "hdr", "exr", "pnm", "qoi", "ff"] }
# SVG rasterisation only: default-features disabled to drop text shaping
# (rustybuzz/fontdb/ttf-parser/unicode-*) and embedded-raster codecs
# (gif/image-webp/zune-jpeg). We render shapes/paths; SVG <text> is not drawn
# and bitmaps embedded inside an SVG are skipped. Re-enable "text",
# "system-fonts" and/or "raster-images" to restore those.
resvg = { version = "0.44", default-features = false }
csv = "1.3"
calamine = "0.26"
zip = "2"
quick-xml = "0.36"
pdfium-render = { version = "0.8", optional = true }
gltf = { version = "1.4", optional = true }
