[package]
name = "viewer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "viewer"
path = "src/main.rs"

[dependencies]
viewer-core = { path = "../viewer-core", features = ["pdf", "mesh"] }
eframe = { version = "0.29", default-features = false, features = ["glow", "default_fonts", "wayland", "x11"] }
egui_extras = { version = "0.29", default-features = false }
egui_commonmark = { version = "0.18", default-features = false }
rfd = "0.15"
mimalloc = "0.1"
