[package]
name = "viewer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "viewer"
path = "src/main.rs"

[dependencies]
viewer-core = { path = "../viewer-core", features = ["pdf", "mesh", "media", "midi"] }
eframe = { version = "0.29", default-features = false, features = ["glow", "default_fonts", "wayland", "x11"] }
egui_extras = { version = "0.29", default-features = false }
egui_commonmark = { version = "0.18", default-features = false }
rfd = "0.15"
mimalloc = "0.1"
# The video sink end of the media data plane: receives Arc-backed `Frame`s off a
# latest-wins channel fed by the playback worker in viewer-core. Vendored in
# this workspace (crates/micro-media) so the repo builds self-contained.
micro-media = { path = "../micro-media" }
